k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lag-app
  namespace: lag-app
  labels:
    app.kubernetes.io/name: lag-app
spec:
  selector:
    app.kubernetes.io/name: lag-app
  ports:
    - name: http
      port: 80
      targetPort: http
